# DEM-APP

./: CHANGELOG_v3.17.md  README.md  pyproject.toml  requirements.txt
src/app/: Home.py  filtros_globales.py
src/app/pages/: 1_📈_Explorador_pronostico.py  2_🎯_Sugerencias_automaticas.py  3_🆕_Simulador_novedades.py  4_🔧_TACO_MP.py  5_💾_Guardar_Cargar.py  6_📥_Descargar_demanda.py
src/core/: auth.py  cloud_storage.py  config.py  fast_io.py  optimize.py  secrets_guard.py
src/features/: build_features.py  text_extractors.py
src/models/: anchor_metas.py  cliente_forecast.py  cliente_isbn_forecast.py  forecast_prophet.py  forecast_runner.py  hedonic_model.py  novedades_store.py  overrides_cliente_store.py  overrides_store.py  run_all.py  run_forecasts.py  seasonality.py  subir_a_nube.py  sugeridos.py
src/utils/: catalogo_mp.py  dictionaries.py  ingesta_siesa.py
src/utils/seed_data/: catalogo_mp_seed.parquet
