[project]
name = "sbc-demanda"
version = "3.17.0"
description = "Sistema de planeación de demanda Sociedad Bíblica Colombiana 2027-2030"
authors = [{name = "Alberto Peña Contreras", email = "alberto@sbc.org"}]
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "pyarrow>=15.0.0",
    "prophet>=1.1.5",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "python-calamine>=0.2.0",
    "plotly>=5.20.0",
    "python-dateutil>=2.9.0",
    "holidays>=0.45",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
